# ShiftGuard

./: .env.example  .gitignore  README.md  pyproject.toml
artifacts/: metrics_v1.json  model_v1.pkl  schema_v1.json
data/raw/: german_credit.csv
scripts/: download_data.py
src/shiftguard/: __init__.py  config.py
src/shiftguard/data/: __init__.py  load.py  preprocess.py  shift.py
src/shiftguard/models/: __init__.py  predict.py  train.py
src/shiftguard/monitoring/: __init__.py  drift.py  metrics.py  policy.py  uncertainty.py
src/shiftguard/service/: app.py  schema.py  storage.py
tests/: test_smoke.py
